Вроде всё наладил